--- a/fateps-site/src/app/styles/main.scss
+++ b/fateps-site/src/app/styles/main.scss
@@ -9,7 +9,7 @@ html {
 }
   
 body {
-    background-color: #1b1512;
+    background-color: #1b1512 !important;
     margin: 0;
     padding: 0;
     min-height: 100%;
@@ -502,7 +502,7 @@ body {
   }
   
   body {
-    color: #baa096;
+    color: #baa096 !important;
     font-size: 13px;
     font-weight: 400;
     font-family: "Sora", "Roboto", sans-serif;
